# hydrogen

./: .gitignore  .gitpod_test.yml  .neomake.yaml  404.html  CODE_OF_CONDUCT.md  Earthfile  LICENSE  README.adoc  SECURITY.md  docker-compose.yaml  index.html  run.sh
.github/: dependabot.yml
.github/workflows/: nightly.yml  release.yml  rolling.yml  wiki.yml
.gitpod/: Dockerfile
apps/gateway/: Cargo.toml  Earthfile
apps/gateway/docker/: Dockerfile
apps/gateway/src/: args.rs  config.rs  error.rs  logger.rs  macros.rs  main.rs  messages.rs  routes.rs  server.rs  ws.rs
apps/gateway/src/bus/: nats.rs  redis.rs
apps/gateway/src/handlers/: connection.rs  connection_send.rs  health.rs  websocket.rs
apps/gateway/test/: config.yaml
apps/mproc/: Cargo.toml
apps/mproc/docker/: Dockerfile
apps/mproc/src/: args.rs  error.rs  logger.rs  main.rs
apps/worker/: Cargo.toml  Earthfile
apps/worker/docker/: Dockerfile
apps/worker/src/: args.rs  config.rs  error.rs  logger.rs  main.rs  messages.rs  routes.rs
apps/worker/src/bus/: nats.rs
apps/worker/test/: config.yaml
architecture/: index.html
code/: Earthfile
code/apps/gateway/: Cargo.toml
code/apps/gateway/docker/: Dockerfile
code/apps/gateway/src/: config.rs  error.rs  logger.rs  main.rs  messages.rs  routes.rs  server.rs  types.rs  ws.rs
code/apps/gateway/src/handlers/: connection.rs  health.rs  websocket.rs
code/apps/mproc/: Cargo.toml
code/apps/mproc/docker/: Dockerfile
code/apps/mproc/src/: args.rs  config.rs  main.rs  routes.rs
code/apps/operator/: .dockerignore  Cargo.toml  rustfmt.toml
code/apps/operator/docker/: Dockerfile
code/apps/operator/res/: example.yaml
code/apps/operator/src/: args.rs  config.rs  error.rs  k8s.rs  main.rs
code/apps/operator/src/crds/: echo.rs  example.yaml  gateway.rs  mod.rs  mproc.rs
code/libs/bus/: Cargo.toml
code/libs/bus/src/: lib.rs  nats.rs  redis.rs
code/libs/bus2/: stream.proto
code/libs/error/: Cargo.toml
code/libs/error/src/: lib.rs
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/helm/templates/gateway/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml
deploy/helm/templates/mproc/: deployment.yaml  hpa.yaml  secret.yaml
deploy/helm/templates/operator/: crds.yaml  deployment.yaml  secret.yaml
deploy/helm/templates/spoderman/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml
deploy/helm/templates/support/: default-route.yaml  dss-authorizer.yaml  dss-connect.yaml  dss-disconnect.yaml  dss-rules-engine.yaml  dss-sink-a.yaml  dss-sink-b.yaml  rules-engine.yaml
deploy/helm/templates/worker/: deployment.yaml  hpa.yaml  secret.yaml
docs/: .gitignore  Earthfile  README.adoc
docs/wiki/: .gitignore  config.toml  index.md  retype.yml  v1-architecture-abstract.drawio
docs/wiki/architecture/: index.md  system.xml
docs/wiki/content/: _index.adoc  architecture.adoc
docs/wiki/content/diagrams/: deployment_view.py  runtime_view.py
docs/wiki/endpoints/: index.md
docs/wiki/gateway/configuration/: index.md
docs/wiki/gateway/downstream-services/: index.md
docs/wiki/gateway/endpoints/: index.md
endpoints/: index.html
examples/: echo.yaml
examples/c2c-chat/: README.md
examples/c2c-chat/fn-message/: handler.go
examples/chat/: README.md  deploy.sh  fn-message.yml  hydrogen-values.yaml
examples/timer/: README.md
gateway/configuration/: index.html
gateway/downstream-services/: index.html
gateway/endpoints/: index.html
libs/bus/: Cargo.toml
libs/bus/src/: nats.rs
libs/error/: Cargo.toml  Earthfile
libs/error/src/: lib.rs
mproc/configuration/: index.html
mproc/downstream-services/: index.html
resources/js/: config.js  search.json
socketboss/: Cargo.toml
socketboss/docker/: Dockerfile
socketboss/res/: config.yaml
socketboss/src/: args.rs  main.rs  messages.rs  send_handler.rs  server.rs
spoderman/: Cargo.toml  Earthfile  tasks.py
spoderman/docker/: Dockerfile
spoderman/res/: config.yaml
spoderman/src/: args.rs  config.rs  error.rs  logger.rs  main.rs  messages.rs  routes.rs  send_handler.rs  server.rs  websocket_handler.rs  ws.rs
spoderman/src/handlers/: connection_send.rs
support/: authorizer.py  connect.py  defaultroute.py  disconnect.py  rules_engine.py
support/docker/: Dockerfile  go1.dockerfile  python3.dockerfile
support/dummy/: go.mod  main.go
test/: config.yaml
worker/configuration/: index.html
worker/downstream-services/: index.html
(+10 files in other folders)
