[package]
name = "spoderman"
version = "0.1.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"

[dependencies]
ureq = "2.4.0"
clap = "3.0.10"
chrono = "0.4.19"
futures = "0.3.19"
redis = { version = "0.21.5", features = ["tokio-comp"] }
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
actix = "^0.12"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
json = "^0.12"
