[package]
name = "spoderman-gateway"
version = "0.0.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"

[dependencies]
spoderman-bus = { path = "../../libs/bus" }
spoderman-error = { path = "../../libs/error" }

ureq = "^2.4"
clap = "^3.2"
chrono = "0.4.19"
futures = "0.3.21"
redis = { version = "0.21.5", features = ["tokio-comp"] }
actix-web = "^4.1"
actix-web-actors = "^4.1"
actix = "0.13.0"
uuid = { version = "^1.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8.24"
json = "0.12.4"
nats = "0.21.0"
