[package]
name = "hydrogen-mproc"
version = "0.0.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"

[dependencies]
hydrogen-bus = { path = "../../libs/bus" }
hydrogen-error = { path = "../../libs/error" }

ureq = "^2.4"
clap = "^3.2"
chrono = "0.4.19"
futures = "0.3.21"
uuid = { version = "^1.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8.24"
tokio = { version = "^1.19", features = ["full"] }
json = "0.12.4"
async-nats = "0.27.0"
fancy-regex = "0.10.0"
