[package]
name = "hydrogen-operator"
version = "0.0.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"

[dependencies]
hydrogen-error = { path = "../../libs/error" }

async-trait = "0.1.57"
clap = "^3.2"
chrono = "0.4.19"
futures = "0.3.24"
uuid = { version = "^1.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8.24"
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread"]}
json = "0.12.4"
fancy-regex = "0.10.0"
kube = { version = "0.74.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
schemars = "0.8.10"
